--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./style.css" rel="stylesheet" />
-    <title>Youtube UI Clone</title>
+    <title>Online Shopping Site for fashion,Electronics & Home</title>
 </head>
 <body>
    
@@ -17,9 +17,12 @@
     <div class="main">
         <div class="sidebar-top">
             <div class="top">
-                <label for="">Sort by :<strong> Relevance &nbsp;</strong> <i class="fa-solid fa-angle-down"></i></label>
+                <label for="">Sort by :<strong> Relevance &nbsp;</strong> </label>
+                <i class="fa-solid fa-angle-down"></i>
             </div>
         </div>
+      <div class="main-content">
+
         <div class="sidebar">
 
             <div class="sub_sidebar">
@@ -28,91 +31,289 @@
                     <p>1000+ Products</p>
                 </div>
                 <hr>
-                <div class="home sidebar_chield">
-                    <strong>Category&nbsp; &nbsp;  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</strong> <i class="fa-solid fa-angle-up"></i>
+                <div class="sidebar_chield">
+                    <strong>Category</strong> <i class="fa-solid fa-angle-up"></i>
                 </div>
                 <div class="home sidebar_chield">
-                    <input type="text" placeholder="Search" /><i class="material-icons">search</i>
+                    <i class="material-icons">search</i>
+                    <input type="text" placeholder="Search" />
                 </div>
-                <div class="trending sidebar_chield">
+                <div class="trending sidebar_chield_item">
                     <input type="checkbox">
                     <span>Women T-shirts</span>
                 </div>
-                <div class="subscription sidebar_chield">
-                    <input type="checkbox">
+                <div class="subscription sidebar_chield_item ">
+                    <input type="checkbox" >
                     <span>Women Tops And Tunics</span>
                 </div>
                 </div>
                 <!-- <hr> -->
                 <div class="sub_sidebar">
-                <div class="library sidebar_chield">
+                <div class="library sidebar_chield_item">
                     <input type="checkbox">
                     <span>Bedsheets</span>
                 </div>
-                <div class="history sidebar_chield">
+                <div class="history sidebar_chield_item">
                     <input type="checkbox">
                     <span>Bike Covers</span>
                 </div>
-                <div class="yourvideos sidebar_chield">
+                <div class="yourvideos sidebar_chield_item">
                     <input type="checkbox">
                     <span>Blouses</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Earrings & Studs</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Hair Accessories</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Hair Oils</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Jewellery Set</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Kids Toys</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Kitchin Storage</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="watchlater sidebar_chield_item">
                     <input type="checkbox">
                     <span>Kitchin Tools</span>
                 </div>
-                <div class="watchlater sidebar_chield">
+                <div class="show-more sidebar_chield">
                     <span style="color: #9F2089;" >Show More</span>
                 </div>
                 <hr>
                 <div class="watchlater sidebar_chield">
-                    <strong>Gender&nbsp; &nbsp;  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</strong> <i class="fa-solid fa-angle-up"></i>
+                    <strong>Gender</strong> <i class="fa-solid fa-angle-up"></i>
                 </div>
                 <div class="Male sidebar_chield">
+                    <label for="Gender">Boys</label>
+                    <label for="Gender">Kids</label>
                     <label for="Gender">Women</label>
+                    <label for="Gender">Men</label>
                 </div>
-                <div class="likedvideos sidebar_chield">
-                    <i class="material-icons">thumb_up</i>
-                    <span>Liked Videos</span>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Color</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Fabric</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Dail Shape</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Size</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Price</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Rating</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Occassion</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Kurta Fabric</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Combo</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Discount</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <div class="watchlater sidebar_chield">
+                    <strong>Reversible</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Used For</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Smartcoins</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Meesho Gold</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Meesho Mall</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Fit/ Shape</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Material</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Bottom Length</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Print Or Pattern Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Bottom Style</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Bottomwear Fabric</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Ornamentation</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Bottom Pattern Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Border</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Surface Styling</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Back Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Top Pattern</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Inner Fabric</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Loom Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Top Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Brand</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Compatible Models</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Warranty Period</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Waist Rise</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Bottom Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Heel Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Dial Design</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Concern</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Padding</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Frame Material</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Lens Material</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Frame Shape</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Frame Type</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Card Slot</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>No Of Compartments</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Base Metal</strong> <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <hr>
+                <div class="watchlater sidebar_chield">
+                    <strong>Frame Style</strong> <i class="fa-solid fa-angle-up"></i>
                 </div>
             </div>
         </div>
         <div class="videos">
-            <h1 class="recomend">Recomended</h1>
             <div class="video-container"> <!-- single video section -->
-                <div class="video">
-                    <div class="thumbnail"> <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg"
-                            alt="thumbnail" /> </div>
-                    <div class="video-details">
-                        <div class="author"> <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="" /> </div>
-                        <div class="video-title">
-                            <h3> Top % programming languages to learn in 2021 | Best Programminglanguage to learn </h3>
-                            <p>FutureCoders</p> <span>Views * 3 Months ago</span>
+                <div class="Services-card">
+
+                    <img src="./images/services-2.jpg">
+                    <div class="Services-card-text">
+                        <h3>Usefull Extension Boards</h3>
+                        <div class="mrp">
+                            <h1>&#8377;148</h1>
+                            <p>onwards</p>
                         </div>
+                       
+                       <span>Free Delivery</span>
+                       <div class="rating">
+                        <span>3.7 &#9733;</span>
+                        <p> 193847 Reviews</p>
+                       </div>
+                      
+
                     </div>
                 </div>
                 <div class="video">
@@ -270,7 +471,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>s
+      </div>
     </div>
 </body>
 
