commit for merge code in code

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               
                </div>
                <div class="vr-Line"></div>
-               <div><a href="#">Become a Supplier</a> </div>
+               <div><a href="./supplier page/supplier.html">Become a Supplier</a> </div>
                <div class="vr-Line"></div>
                <div><a href="#">Newsroom</a> </div>
                <div class="vr-Line"></div>
