Final merge to main

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="sticky top-0 bg-white">
         <nav class="primary-nav">
-           <a href="#" class="logo"><img src="/images/meesho_logo.png" width="156px" height="36px" alt="meesho_logo"></a>      
+           <a href="#" class="logo"><img src="./images/meesho_logo.png" width="156px" height="36px" alt="meesho_logo"></a>      
                <div class="search-box">
                 <i class="fa-solid fa-magnifying-glass "></i>
                 <input type="text" class="box" placeholder="Try Saree,Kurti or Search by Product Code">
@@ -47,8 +47,8 @@
                      </span>
                      <div class="Download-hover">
                       <h4>Download From</h4>
-                    <a href="#"><img src="/images/Google-Play-Logo.png" alt="Google-Play-Logo"></a>
-                    <a href="#"><img src="/images/apple store.png" alt="apple-store-Logo"></a>
+                    <a href="#"><img src="./images/Google-Play-Logo.png" alt="Google-Play-Logo"></a>
+                    <a href="#"><img src="./images/apple store.png" alt="apple-store-Logo"></a>
                     </div>
               
                </div>
@@ -1902,11 +1902,11 @@
             <div class="fprimary-4 px-2">
               <h5 class="font-bold text-lg">Reach out to us</h5>
 
-              <div class="flex gap-x-2 mt-5"><a href="#"><img src="/images/facebook.webp" alt="facebook"></a>
-                <a href="#"><img src="/images/instagram.webp" alt="instagram"></a>
-                <a href="#"><img src="/images/linkedin.webp" alt="linkedin"></a>
-                <a href="#"><img src="/images/youtube.webp" alt="youtube"></a>
-                <a href="#"><img src="/images/twitter.webp" alt="twitter"></a>
+              <div class="flex gap-x-2 mt-5"><a href="#"><img src="./images/facebook.webp" alt="facebook"></a>
+                <a href="#"><img src="./images/instagram.webp" alt="instagram"></a>
+                <a href="#"><img src="./images/linkedin.webp" alt="linkedin"></a>
+                <a href="#"><img src="./images/youtube.webp" alt="youtube"></a>
+                <a href="#"><img src="./images/twitter.webp" alt="twitter"></a>
               
               </div>
             </div>
