--- a/women-western.html
+++ b/women-western.html
@@ -16,7 +16,7 @@
 <body>
   <header class="laptop sticky top-0 bg-white md:hidden lg:block ">
     <nav class="primary-nav  ">
-       <a href="#" class="logo"><img src="/images/meesho_logo.png" width="156px" height="36px" alt="meesho_logo"></a>      
+       <a href="#" class="logo"><img src="./images/meesho_logo.png" width="156px" height="36px" alt="meesho_logo"></a>      
            <div class="search-box  rounded-2xl">
             <i class="fa-solid fa-magnifying-glass "></i>
             <input type="text" class="box" placeholder="Try Saree,Kurti or Search by Product Code">
